@@ -1,31 +1,37 @@
 package com.example.demo.service;
 
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Service;
 import com.example.demo.model.AskResponse;
 import com.example.demo.service.IntentDetector.Hint;
 import com.example.demo.service.IntentDetector.Intent;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Locale;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class RagService {
+
+    @Value("${rag.top.k:4}")
+    private int topK;
+
+    @Value("${rag.threshold:0.35}")
+    private double minScore;
+
     private final VectorStore store;
     private final GeminiRestService gemini;
-    private final int topK;
 
-    public RagService(VectorStore store, GeminiRestService gemini, @Value("${rag.top.k:4}") int topK) {
+    public RagService(VectorStore store, GeminiRestService gemini) {
         this.store = store;
         this.gemini = gemini;
-        this.topK = topK;
     }
 
     public AskResponse ask(String question) throws Exception {
         if (store.size() == 0) {
-            return new AskResponse("Chưa có dữ liệu. Hãy upload & reindex một file PDF ở panel bên phải.", List.of());
+            return new AskResponse(
+                "Chưa upload dữ liệu PDF.",
+                List.of()
+            );
         }
 
         Hint hint = IntentDetector.detect(question);
@@ -34,32 +40,43 @@ public class RagService {
         int oversample = Math.max(topK * 3, topK + 2);
         List<VectorStore.Scored> firstPass = store.topK(q, oversample);
 
+        if (firstPass.isEmpty() || firstPass.get(0).score() < minScore) {
+            return new AskResponse("Tôi không biết.", List.of());
+        }
+
         List<VectorStore.Scored> rescored = new ArrayList<>();
         String sec = hint.sectionHint == null ? null : hint.sectionHint.toLowerCase(Locale.ROOT);
+
         for (var s : firstPass) {
             double boost = 0.0;
             String textLower = s.text().toLowerCase(Locale.ROOT);
 
             if (sec != null) {
-                if (textLower.contains(sec))
-                    boost += 0.08;
-                if (sec.contains("mở đầu") && (textLower.contains("mở đầu") || textLower.contains("introduction")))
+                if (textLower.contains(sec)) boost += 0.08;
+                if (sec.contains("mở đầu") &&
+                    (textLower.contains("mở đầu") || textLower.contains("introduction"))) {
                     boost += 0.06;
+                }
             }
-            if (hint.intent == Intent.DEFINE && hint.term != null
-                    && textLower.contains(hint.term.toLowerCase(Locale.ROOT))) {
+            if (hint.intent == Intent.DEFINE && hint.term != null &&
+                textLower.contains(hint.term.toLowerCase(Locale.ROOT))) {
                 boost += 0.12;
             }
             rescored.add(new VectorStore.Scored(s.id(), s.text(), s.score() + boost));
         }
         rescored.sort(Comparator.comparingDouble(VectorStore.Scored::score).reversed());
+
+        if (rescored.isEmpty() || rescored.get(0).score() < minScore) {
+            return new AskResponse("Tôi không biết.", List.of());
+        }
+
         var hits = rescored.subList(0, Math.min(topK, rescored.size()));
 
         StringBuilder ctx = new StringBuilder();
         for (VectorStore.Scored s : hits) {
-            ctx.append("\n[Chunk #").append(s.id()).append(" / score=").append(String.format("%.3f", s.score()))
-                    .append("]\n");
-            ctx.append(s.text()).append("\n");
+            ctx.append("\n[Chunk #").append(s.id())
+               .append(" / score=").append(String.format("%.3f", s.score()))
+               .append("]\n").append(s.text()).append("\n");
         }
 
         String system = switch (hint.intent) {
@@ -95,10 +112,17 @@ public class RagService {
             default -> "";
         };
 
-        String prompt = system + "\n\n=== CONTEXT START ===\n" + ctx + "=== CONTEXT END ===\n\n"
+        String prompt = system
+                + "\n\n=== CONTEXT START ===\n" + ctx + "=== CONTEXT END ===\n\n"
                 + formatPart + "Question: " + question + "\nAnswer:";
 
         String answer = gemini.chat(prompt);
-        return new AskResponse(answer, hits.stream().map(s -> new AskResponse.SourceScore(s.id(), s.score())).toList());
+
+        return new AskResponse(
+            answer,
+            hits.stream()
+                .map(s -> new AskResponse.SourceScore(s.id(), s.score()))
+                .collect(Collectors.toList())
+        );
     }
 }
